# soyle

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml  test.yml
docs/: MANUAL_TESTS.md  signing.md
docs/research/: 2026-05-23-kz-detection-root-cause.md
docs/superpowers/plans/: 2026-04-19-whisperflow-v1.md  2026-04-30-cloud-sync-phase1-implementation.md  2026-05-21-kz-code-switching-implementation.md  2026-05-22-cloud-sync-phase2-implementation.md  2026-05-24-kz-dual-model-implementation.md  2026-06-13-ux-stage0-foundation.md  2026-06-15-ux-stage1-dictation-loop.md  2026-06-16-ux-stage2-result-history.md
docs/superpowers/specs/: 2026-04-19-whisperflow-design.md  2026-04-30-cloud-sync-design.md  2026-05-21-kz-code-switching-design.md  2026-05-22-cloud-sync-phase2-design.md  2026-05-24-kz-dual-model-design.md  2026-06-13-ux-redesign-roadmap-design.md  2026-06-13-ux-stage0-foundation-design.md  2026-06-15-ux-stage1-dictation-loop-design.md  2026-06-16-ux-stage2-result-history-design.md
installer/: installer.iss
scripts/: build_exe.py  build_installer.py  build_translations.py  diag_e2e.py  download_cudnn.py  download_model.py  generate_icon.py  update_translations.py
src/soyle/: __main__.py  app.py
src/soyle/assets/: README.md
src/soyle/core/: bus.py  cloud_sync.py  config.py  dictionary.py  errors.py  history.py  hotkey.py  injector.py  kz_aware_transcriber.py  postprocess.py  recorder.py  transcriber.py  usage.py
src/soyle/i18n/: soyle_en.qm  soyle_en.ts  soyle_kk.qm  soyle_kk.ts
src/soyle/platform/: autostart.py  paste.py  single_instance.py  window.py
src/soyle/prompts/: ai_prompt_v1.md  plain_text_v1.md  polish_v1.md  rewrite_v1.md  task_v1.md
src/soyle/ui/: async_runnable.py  floating_button.py  history_window.py  i18n.py  indicator.py  resources.py  settings.py  shortcut_capture.py  tray.py
src/soyle/ui/theme/: __init__.py  qss.py  tokens.py
src/whisperflow/: __main__.py  app.py
src/whisperflow/core/: bus.py  config.py  dictionary.py  errors.py  hotkey.py  injector.py  postprocess.py  recorder.py  state.py  transcriber.py  usage.py
src/whisperflow/platform/: autostart.py  paste.py  single_instance.py  window.py
src/whisperflow/prompts/: polish_v1.md  rewrite_v1.md
src/whisperflow/ui/: settings.py  tray.py
src/whisperflow/ui/qss/: dark.qss  light.qss
tests/: conftest.py
tests/fixtures/audio/: expected.json
tests/fixtures/config/: broken.toml  valid.toml
tests/integration/: test_transcriber.py
tests/unit/: test_autostart.py  test_bus.py  test_cloud_sync.py  test_config.py  test_crash_handler.py  test_dictionary.py  test_errors.py  test_floating_button.py  test_history.py  test_history_recording.py  test_history_window.py  test_hotkey.py  test_i18n.py  test_indicator.py  test_injector.py  test_kz_aware_transcriber.py  test_monthly_limit.py  test_platform_paste.py  test_platform_window.py  test_postprocess.py  test_recorder.py  test_settings_language.py  test_shortcut_capture.py  test_single_instance.py  test_state.py  test_theme_qss.py  test_theme_tokens.py  test_transcriber.py  test_transcriber_filters.py  test_tray_history.py  test_ui_resources.py  test_usage.py
