[project]
name = "soyle"
version = "1.1.0"
description = "Söyle — local Windows + Android push-to-talk dictation with Whisper and LLM polish (Kazakh / Russian / English code-switching)"
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nurgisa Andasbek", email = "andasbek.nurgysa@gmail.com" }]

dependencies = [
  "pyside6>=6.8.0",
  "faster-whisper>=1.1.0",
  "sounddevice>=0.5.0",
  "numpy>=2.1.0",
  "keyboard>=0.13.5",
  "pywin32>=308; sys_platform == 'win32'",
  "pyperclip>=1.9.0",
  "keyring>=25.5.0",
  "httpx>=0.28.0",
  "pydantic>=2.10.0",
  "tomli-w>=1.1.0",
  "structlog>=24.4.0",
  "platformdirs>=4.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-qt>=4.4.0",
  "pytest-asyncio>=0.24.0",
  "pytest-xdist>=3.6.0",
  "pytest-mock>=3.14.0",
  "respx>=0.22.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "pre-commit>=4.0.0",
  # Third-party type stubs so `mypy strict` doesn't trip on import-untyped.
  # `faster_whisper` and `sounddevice` have no official stubs — see the
  # [[tool.mypy.overrides]] block below for those.
  "types-keyboard>=0.13.0",
  "types-pyperclip>=1.9.0",
  "types-pywin32>=308",
]
setup = [
  # Only needed when running scripts/download_model.py --model kz to
  # convert the HuggingFace Transformers checkpoint (akuzdeuov/whisper-base.kk)
  # into CTranslate2 int8 format. Not used at runtime.
  #
  # NOTE (codex P2 on PR #42): the converter itself —
  # ctranslate2.converters.TransformersConverter — ships with the
  # `ctranslate2` package, which is ALREADY a transitive dependency of
  # faster-whisper. What a fresh env is missing is the Transformers +
  # PyTorch stack that the converter imports to read the HF checkpoint.
  # ("ct2-transformers-converter" is a CLI entry-point name, NOT a PyPI
  # package — depending on it would fail resolution.)
  "transformers>=4.40",
  "torch>=2.4",
]
build = [
  "pyinstaller>=6.11.0",
  "pillow>=10.4.0",
]
gpu = [
  "nvidia-cublas-cu12",
  "nvidia-cudnn-cu12>=9,<10",
]

[project.scripts]
soyle = "soyle.app:main"

[project.urls]
Homepage = "https://github.com/nurgysa/soyle"
Issues = "https://github.com/nurgysa/soyle/issues"
Changelog = "https://github.com/nurgysa/soyle/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/soyle"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = [
  "E501",   # line length — handled by formatter
  # The product is a Kazakh + Russian + English dictation tool. Cyrillic
  # characters appear in every user-visible string by design (toasts,
  # error messages, settings labels). RUF001/RUF002/RUF003 flag any
  # Cyrillic letter that visually resembles a Latin one as "ambiguous"
  # — for this codebase that's pure noise, not signal. Disabling them
  # keeps the lint output focused on real issues instead of teaching
  # contributors to add `# noqa` to every Russian string they write.
  "RUF001", # ambiguous unicode in strings
  "RUF002", # ambiguous unicode in docstrings
  "RUF003", # ambiguous unicode in comments
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

# `faster_whisper` and `sounddevice` ship no PEP 561 stubs and have no
# `types-*` package on PyPI as of 2026-05. Without these overrides,
# `strict = true` flags every import line as an error. The library
# behavior is well-documented in their READMEs; missing type info is a
# small price for not vendoring our own stubs.
[[tool.mypy.overrides]]
module = ["faster_whisper.*", "sounddevice.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Exclude gpu-marked tests by default — they instantiate a real Whisper
# model in a module-scoped fixture, which is slow even when the audio
# fixtures aren't present (the per-test skip check fires AFTER the model
# loads). Opt in explicitly with `pytest -m gpu` when you actually want
# them; CI runs them in a separate job on a GPU runner.
addopts = "-m 'not gpu'"
markers = [
  "gpu: integration tests that require a CUDA-capable GPU",
]
